--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,22 @@
-planet.pluto.radius = 1188.3
-planet.pluto.acceleration = 0.620
+spring.application.name=Learn Spring By Making Planets
+
+spring.jpa.hibernate.ddl.auto=create
+spring.datasource.url = jdbc:mysql://localhost:3306/planet_db
+spring.datasource.username = root
+spring.datasource.password = admin
+spring.jpa.properties.hibernate.connection.characterEncoding=utf-8
+spring.jpa.properties.hibernate.connection.CharSet=utf-8
+spring.jpa.properties.hibernate.connection.useUnicode=true 
+
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.use_sql_comments=true
+
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+spring.jpa.properties.hibernate.id.new_generator_mappings=true
+
+spring.thymeleaf.cache=false
+spring.thymeleaf.enabled=true
+spring.thymeleaf.prefix=classpath:/templates/
+spring.thymeleaf.suffix=.html
+spring.resources.static-locations=classpath:/static/
